// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sitewide Stats UserReports renders without crashing 1`] = `
<div>
  <div
    className="row mt-15"
  >
    <div
      className="col-xs-12"
    >
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Year
      </Pill>
      <Pill
        active={true}
        onClick={[Function]}
        type="secondary"
      >
        Last Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Year
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        All time
      </Pill>
    </div>
  </div>
  <section
    id="listening-activity"
  >
    <ErrorBoundary>
      <UserListeningActivity
        apiUrl="foobar"
        range="week"
      />
    </ErrorBoundary>
  </section>
  <section
    id="top-entity"
  >
    <div
      className="row"
    >
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="artist"
            range="week"
            terminology="artist"
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="release"
            range="week"
            terminology="album"
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="recording"
            range="week"
            terminology="track"
          />
        </ErrorBoundary>
      </div>
    </div>
  </section>
  <section
    id="artist-origin"
  >
    <ErrorBoundary>
      <UserArtistMap
        apiUrl="foobar"
        range="week"
      />
    </ErrorBoundary>
  </section>
</div>
`;

exports[`User Stats UserReports renders without crashing 1`] = `
<div>
  <div
    className="row mt-15"
  >
    <div
      className="col-xs-12"
    >
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Year
      </Pill>
      <Pill
        active={true}
        onClick={[Function]}
        type="secondary"
      >
        Last Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Year
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        All time
      </Pill>
    </div>
  </div>
  <section
    id="listening-activity"
  >
    <ErrorBoundary>
      <UserListeningActivity
        apiUrl="foobar"
        range="week"
        user={
          Object {
            "name": "test_user",
          }
        }
      />
    </ErrorBoundary>
  </section>
  <section
    id="top-entity"
  >
    <div
      className="row"
    >
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="artist"
            range="week"
            terminology="artist"
            user={
              Object {
                "name": "test_user",
              }
            }
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="release"
            range="week"
            terminology="album"
            user={
              Object {
                "name": "test_user",
              }
            }
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="recording"
            range="week"
            terminology="track"
            user={
              Object {
                "name": "test_user",
              }
            }
          />
        </ErrorBoundary>
      </div>
    </div>
  </section>
  <section
    id="daily-activity"
  >
    <ErrorBoundary>
      <UserDailyActivity
        apiUrl="foobar"
        range="week"
        user={
          Object {
            "name": "test_user",
          }
        }
      />
    </ErrorBoundary>
  </section>
  <section
    id="artist-origin"
  >
    <ErrorBoundary>
      <UserArtistMap
        apiUrl="foobar"
        range="week"
        user={
          Object {
            "name": "test_user",
          }
        }
      />
    </ErrorBoundary>
  </section>
</div>
`;
